--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@vee-validate/rules": "^4.15.0",
+    "axios": "^1.7.9",
     "font-awesome": "^4.7.0",
     "pinia": "^3.0.1",
     "vee-validate": "^4.15.0",
